a/main.css
html { background: linear-gradient(rgba(20, 20, 20, 0.85), rgba(20, 20, 20, 0.85)), url('/a/background.png') no-repeat left center fixed }
body {
	margin: 0;
	font-family: helvetica, sans-serif;
	-webkit-text-size-adjust: none;
	tab-size: 4;
}
* {
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-overflow-scrolling: touch;
}
*::-webkit-input-placeholder {
	color: #666;
	font-size: 0.9em;
}
.blk { display: block }
.ib, #logo { display: inline-block }
.maxwidth, img { max-width: 100% }
.lft, .row > * { float: left }
.rit, .c-sig { float: right }
*:first-child { margin-top: 0 }
.mar { margin: 6px }
.tumar { margin-top: 2px }
.sumar, :not(img) + .desc { margin-top: 4px }
.umar, :not(.row) > section:not(:first-child), article:not(:first-child), section:not(:first-child) { margin-top: 6px }
.bumar, h1:not(:first-child) { margin-top: 8px }
.mar { margin: 6px }
.lmar, #content { margin-bottom: 6px }
.rmar { margin-right: 6px }
.smar, .error, .half { margin-bottom: 6px }
.lmar { margin-left: 6px }
.pad { padding: 2px 4px 4px }
.desc, #content, #footer, .error { padding: 4px }
.spad { padding: 3px }
.scrl { overflow: auto }
.scrlx { overflow-x: auto }
.scrly { overflow-y: auto }
.br, .desc { border-radius: 4px }
.hglt, .desc, section, article, blockquote { background: rgba(255, 255, 255, 0.4) }
.shglt, #content, #aside, #footer { background: rgba(255, 255, 255, 0.7) }
.grey, .c-sig { color: #555 }
small, footer, .c-sig { font-size: 0.85em }
h3, section h2, article h2, section section h1, section article h1, article section h1, article article h1 {
	margin-top: 0.5em;
	font-size: 1em;
}
h2, section h1, article h1 {
	margin-top: 0.8em; margin-bottom: 0.3em;
	font-size: 1.3em;
}
ul, p { margin: 6px 0 0 0 }
.error { background: #f00 }
.white, .error { color: #fff }
.center { margin: 0 auto }
.center-text, #footer, #nav { text-align: center }
.pre { white-space: pre-wrap }
.clear, .clearfix::after, nav::after, .row::after {
	display: block;
	clear: both;
	content: '';
}
h1, h2, h3, h4, h5, h6 {
	margin: 2px 0px;
	font-family: Verdana;
	font-weight: normal;
}
h1 *, h2 *, h3 *, h4 *, h5 *, h6 * { font-weight: inherit !important }
h1 {
	margin-bottom: 0.3em;
	border-bottom: 1px solid #aaa;
	font-size: 1.5em;
	line-height: 1;
	padding-bottom: 1px;
	vertical-align: bottom;
}
a, .ctrl {
	color: #000;
	font-weight: bold;
	text-decoration: none;
	transition: color 0.2s;
	cursor: pointer;
}
a:active, .ctrl:active { color: #02d }
a:hover, .ctrl:hover { color: #15f }
input[type=text], input[type=password] {
	font-family: helvetica;
	font-size: 0.8em;
	height: 1.8em;
}
#nav {
	padding: 0 2px 6px 2px;
	font-size: 0;
	text-align: top;
	background: #000;
}
#logo {
	display: block;
	width: 180px;
	margin: 0 auto 4px;
	line-height: normal;
}
#nav input {
	width: 160px;
	margin: 0;
}
#logo img {
	max-height: 100%;
	padding: 4px 6px 2px;
}
#nav form { line-height: 1 }
#nav > * {
	padding: 0 4px;
	color: #ddd;
	font-weight: normal;
}
#nav > *, #nav input {
	font-size: 0.9rem;
	line-height: 1.5;
	height: auto;
}
#content { padding-bottom: 24px }
@media screen and (min-width: 350px) and (max-width: 440px) { 
	#nav a:nth-child(5)::after, #nav a:nth-last-child(2)::after {
		white-space: pre;
		content: '\a';
	}
}
@media screen and (min-width: 460px) and (max-width: 800px) { 
	#nav a:nth-child(5) { border-right: 1px solid #aaa }
}
@media screen and (min-width: 700px) and (max-width: 800px) { 
	#nav input { transition: width 1s }
}
@media screen and (max-width: 610px), (min-width: 750px) { 
	#nav input { width: 184px }
}
@media screen and (max-width: 610px) { 
	#nav form {
		display: block;
		padding: 4px 0;
	}
}
@media screen and (min-width: 700px) {
	.half {
		width: 49%;
		margin-right: 1%;
	}
}
@media screen and (min-width: 350px) { 
	#nav {
		padding: 4px 4px 0 0;
		text-align: right;
	}
	#logo {
		float: left;
		width: 144px;
		margin: -4px 4px 0 -4px;
	}
	line {
		display: inline-block;
		width: 1px; height: 1.2em;
		background: #888;
		vertical-align: sub;
	}
}
@media screen and (min-width: 800px) { 
	#cont::before {
		position: absolute;
		left: 0; right: 0;
		height: 2rem;
		background: #000;
		content: '';
		z-index: -1;
	}
	#nav {
		padding: 0;
		background: #111;
	}
	#nav > a:active { background: #000 }
	#nav > a:hover { transition: background 0.2s }
	#nav > a:hover { background: #262626 }
	#nav > *, #nav form {
		display: inline-block;
		padding: 0 12px;
		background: #1a1a1a;
		line-height: 2rem;
	}
	#logo {
		display: inline-block; position: relative;
		width: auto; height: 100%;
		margin: 0;
	}
	#logo:hover::before { background: rgba(255, 255, 255, 0.3) }
	#logo:active::before { background: rgba(0, 0, 0, 0.2) }
	#logo::before {
		position: absolute;
		top: 0; left: 0; right: 0; bottom: 0;
		transition: background 0.2s;
		content: '';
	}
	#logo img { padding-bottom: 4px }
}
@media screen and (min-width: 800px) and (max-width: 1499px) { 
	#cont { margin: 0 auto }
	#nav { height: 2rem }
	#nav > :nth-child(-n+5) { float: left }
	#nav > :nth-child(6) { border-left: 1px solid #444 }
	#nav > a:not(#logo) { border-right: 1px solid #444 }
}
@media screen and (min-width: 1500px) { 
	#cont { overflow: hidden }
	#cont::before { display: none }
	#content, #footer { margin: 6px 6px 6px calc(4% + 152px) }
	#nav {
		position: fixed;
		left: 0;
		width: calc(4% + 144px); height: 200px;
		text-align: left;
		background: #181818;
	}
	#nav > :nth-child(6) { margin-top: 16px }
	#nav > * {
		width: 100%;
		padding-left: 16px;
	}
	#nav > ::after {
		position: absolute;
		right: 0.5em;
		content: '\276F';
		color: #999;
	}
	#logo { height: 2rem }
}

